# mel

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  doxy  format.sh
.bsh/: error_callback.c  joystick_callback.c  main.c
.rsrc/shaders/: texture.frag  texture.vert
docs/: affine-mat_8h_source.html  affine_8h_source.html  annotated_dup.js  applesimd_8h_source.html  arm_8h_source.html  call_2bezier_8h_source.html  call_2box_8h_source.html  call_2clipspace_2view__lh__zo_8h_source.html  call_2clipspace_2view__rh__zo_8h_source.html  call_2curve_8h_source.html  call_2frustum_8h_source.html  call_2mat3_8h_source.html  call_2project_8h_source.html  call_2quat_8h_source.html  call_2ray_8h_source.html  call_2sphere_8h_source.html  call_2vec2_8h_source.html  cam_8h_source.html  camera_8h_source.html  cglm_8h_source.html  clipspace_2ortho__lh__no_8h_source.html  clipspace_2ortho__lh__zo_8h_source.html  clipspace_2ortho__rh__no_8h_source.html  clipspace_2project__zo_8h_source.html  clipspace_2view__rh__zo_8h_source.html  dir_00d8134b967144db157e9a2fe7eee4f6.html  dir_03a246bd709bd9c41df0dfba84baf99a.js  dir_204a05132d03c7746f022d6303a1fd22.html  dir_3b64d069691aca202748ad094fce6d20.js  dir_42012079225ddb7d66afbda0033464ae.html  dir_42012079225ddb7d66afbda0033464ae.js  dir_4eae8373efca10123679143414592278.js  dir_6af254562ce3c52c279e381c105011d2.js  dir_7f0b09bb3643be64d556ea1ab1630955.js  dir_9a08eec462e67ff88548b37610c24112.js  dir_a2032ed090fa4a19955300c071026bb8.js  dir_a978280be452da61e26c20dd3ba7177a.html  dir_ad5715b410ecdf718c9a3c325559c407.js  dir_d777bf821072e20c2e3d76adf4f2f5f6.js  dir_da3c7a0bb190c9456d257ddebb968bec.html  (+125 more)
docs/html/: IO_8h_source.html  affine2d_8h_source.html  annotated.html  bezier_8h_source.html  box_8h_source.html  call_2affine2d_8h_source.html  call_2affine_8h_source.html  call_2cam_8h_source.html  call_2clipspace_2ortho__lh__no_8h_source.html  call_2clipspace_2ortho__lh__zo_8h_source.html  call_2clipspace_2ortho__rh__no_8h_source.html  call_2clipspace_2ortho__rh__zo_8h_source.html  call_2clipspace_2persp__lh__no_8h_source.html  call_2clipspace_2persp__lh__zo_8h_source.html  call_2clipspace_2persp__rh__no_8h_source.html  call_2clipspace_2persp__rh__zo_8h_source.html  call_2clipspace_2project__no_8h_source.html  call_2clipspace_2project__zo_8h_source.html  call_2clipspace_2view__lh__no_8h_source.html  call_2clipspace_2view__rh__no_8h_source.html  call_2ease_8h_source.html  call_2euler_8h_source.html  call_2io_8h_source.html  call_2mat2_8h_source.html  call_2mat4_8h_source.html  call_2plane_8h_source.html  call_2vec3_8h_source.html  call_2vec4_8h_source.html  call_8h_source.html  classes.html  clipspace_2ortho__rh__zo_8h_source.html  clipspace_2persp__lh__no_8h_source.html  clipspace_2persp__lh__zo_8h_source.html  clipspace_2persp__rh__no_8h_source.html  clipspace_2persp__rh__zo_8h_source.html  clipspace_2project__no_8h_source.html  clipspace_2view__lh__no_8h_source.html  clipspace_2view__lh__zo_8h_source.html  clipspace_2view__rh__no_8h_source.html  color_8h_source.html  (+209 more)
docs/html/search/: all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  pages_0.js
docs/latex/: annotated.tex  md_README.tex  refman.tex  structMEL__Camera.tex  structMEL__Rect.tex  structMEL__Renderer2D.tex  structMEL__Texture.tex  structMEL__Texture__coll__graph.md5  structString.tex  structString__View.tex  structgladGLversionStruct.tex  structjoystick__t.tex  structmel__t.tex  structmel__t__coll__graph.md5  structnk__allocator.tex  structnk__allocator__coll__graph.md5  structnk__buffer.tex  structnk__buffer__coll__graph.md5  structnk__buffer__marker.tex  structnk__chart.tex  structnk__chart__coll__graph.md5  structnk__chart__slot.tex  structnk__chart__slot__coll__graph.md5  structnk__clipboard.tex  structnk__clipboard__coll__graph.md5  structnk__color.tex  structnk__colorf.tex  structnk__command.tex  structnk__command__arc.tex  structnk__command__arc__coll__graph.md5  structnk__command__arc__filled.tex  structnk__command__buffer.tex  structnk__command__buffer__coll__graph.md5  structnk__command__circle.tex  structnk__command__circle__filled.tex  structnk__command__circle__filled__coll__graph.md5  structnk__command__curve.tex  structnk__command__curve__coll__graph.md5  structnk__command__custom.tex  structnk__command__image.tex  (+125 more)
docs/search/: all_1.js  classes_0.js  classes_6.js  searchdata.js
include/: MEL_Camera.h  MEL_IO.h  MEL_Rect.h  MEL_Renderer2D.h  MEL_Texture.h  MEL_common.h  MEL_debug.h  MEL_def.h  MEL_image.h  MEL_io.h  MEL_logs.h  MEL_misc.h  MEL_opengl.h  MEL_rect.h  MEL_render.h  MEL_shader.h  MEL_thread.h  def.h  gui.h  image.h  opengl.h  shader.h  widget.h
mel/: main.c
mel/engine/: renderer2d.c  texture.c
mel/engine/ext/: glad.c
mel/engine/inc/: IO.h  camera.h  common.h  input.h  logs.h  mel.h  misc.h  renderer2d.h  shaders.h  texture.h  threads.h  types.h
mel/engine/inc/ext/: glad.h  linmath.h  nuklear.h  stb_image.h
mel/engine/inc/ext/KHR/: khrplatform.h
mel/engine/inc/ext/cglm/: affine-mat.h  affine.h  affine2d.h  applesimd.h  bezier.h  box.h  call.h  cam.h  color.h  common.h  curve.h  ease.h  euler.h  frustum.h  io.h  mat2.h  mat3.h  mat4.h  plane.h  project.h  quat.h  ray.h  sphere.h  struct.h  types-struct.h  types.h  util.h  vec2-ext.h  vec2.h  vec3-ext.h  vec3.h  vec4-ext.h  vec4.h
mel/engine/inc/ext/cglm/call/: affine.h  affine2d.h  bezier.h  box.h  cam.h  (+16 more)
resources/shaders/: basic.frag  basic.vert  image.frag  image.vert
src/: MEL_IO.c  MEL_Rect.c  MEL_Renderer2D.c  MEL_Texture.c  MEL_UI.c  MEL_debug.c  MEL_error_callback.c  MEL_joystick_callback.c  MEL_key_callback.c  MEL_logs.c  MEL_scroll_callback.c  MEL_shader.c  MEL_window_size_callback.c  UI.c  glad.c  image.c  io.c  logs.c  main.c  misc.c  rect.c  render.c  renderer2d.c  scroll_callback.c  shaders.c  texture.c  ui.c  widget.c  window_size_callback.c
src/ext/: glad.c
src/inc/: IO.h  camera.h  common.h  def.h  mel.h  misc.h  renderer2d.h  shaders.h  texture.h  threads.h
src/inc/ext/: glad.h  nuklear.h
(+79 files in other folders)
